--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -495,7 +495,7 @@ double pow(double x, double y)
 
 ### 3.3.4 面向`int`、`char`和`bool`这些类型的一些函数
 
-也有一些自由函数是作用于其他基本类型的。例如，本章末尾的编程项目中会用到的一些C++标准库中的只有函数：`min`、`max`和`abs`。
+当然，也有一些自由函数是作用于其他基本类型的。例如，本章末尾的编程项目中会用到的一些C++标准库中的只有函数：`min`、`max`和`abs`。
 
 ```C++
 #include <iostream>
@@ -523,21 +523,21 @@ int main() {
 2
 ```
 
-The min and max functions are defined in such a way that the same function name can be used with diff erent types. They can take either two int arguments or two double arguments, but not a mix.
+`min`和`max`这两个函数的定义方式使其可以被不同类型的参数调用，当然，它们的实参类型必须同时是两个`int`或两个`double`，不能混合在一起。
 
-C++ also has some methods that sound Boolean in nature because of names like islower and isdigit. Other functions seem as though they should have char parameters and return types because they convert characters to their upper or lower case equivalents. Consider the function heading for the free function islower when you \#include <cctype> to have access to its set of functions to classify and transform individual characters.
+C++中还有一些名称为`islower`、`isdigit`的这一类布尔型的方法。另外还有些以`char`为实参和返回值类型的函数，它们会将当前字母转换成等价的大写或小写形式。我们在通过`#include <cctype>`指令引入这组函数对相关字母进行分类和转换时都可以参考这些自由函数的函数头信息。
 
 ```C++
 int islower(int c);
 ```
 
-This function checks whether c is a lowercase letter. It would seem that the parameter should be char and the return type bool like this:
+该函数会负责检查参数`c`中的值是否是一个小写字母，似乎该函数的参数应该是`char`类型，返回值是`bool`类型才对，像这样：
 
 ```C++
 bool islower(char ch); // This is not the function heading
 ```
 
-However, C++ allows an int to be assigned to a char and vice versa. Arithmetic operations can have a mix of integers and character operands.
+但在C++中，`int`与`char`这两种类型之间是可以相互赋值的，它们在算术运算中是可以彼此混用的。
 
 ```C++
 #include <iostream>
@@ -565,7 +565,7 @@ aChar + anInt: 132
 aChar % anInt: 63
 ```
 
-More confusion may occur because C++ considers true to be 1 and false to be 0.
+而由于C++同时也将`true`视为1，`false`为0，这就可能会带来更多的混乱。
 
 ```C++
 #include <iostream>
@@ -587,9 +587,9 @@ int main() {
 1 0
 ```
 
-The output shows true prints as 1 and false as 0.
+如你所见，这里输出的`true`是1，`false`是0。
 
-If you need to classify if a char is an alphabetic letter like “A” or “a”, or a digit such as “9” or “3”, you can use one of the free functions from <cctype>. Th is program shows three more cctype functions:
+如果我们需要对一个字符做“A”或“a”这样大小写区分或者“9”或“3”这样的数字区分，就会用到` <cctype>`中的自由函数。下面我们就来演示一下这个函数库的使用：
 
 ```C++
 #include <iostream>
@@ -626,7 +626,7 @@ isdigit('P')? 0
 isdigit('5')? 1
 ```
 
-The toupper and tolower functions convert a character to its lowercase or uppercase equivalent. Because the return type for both is int instead of char, the functions are cast to char with the code(char). Otherwise the output from this program would have been 88 97.
+另外，我们还可以用`toupper`、`tolower`这两个函数将相关字母转换成等价的大写或小写字母。另外，由于这两个函数的返回值类型都是`int`而不是`char`，所以我们在代码中必须要要将它们强制转换成`char`，否则程序返回的会是88、97这样的数字。
 
 ```C++
 #include <iostream>
@@ -652,7 +652,7 @@ T
 a
 ```
 
-## CHAPTER SUMMARY
+## 本章小结
 
 * You have been confronted with a large variety of details concerning the C++ programming language, expressions, program development, function calls, and the types of errors that occur during program development. Th is can be somewhat overwhelming at first, especially if you have never programmed before. However, most of these details are necessary for implementation of even the simplest program.
 * #include<cmath> provides access to many mathematical and trigonometric functions. \#include<cctype> provides access to a set of functions that classify and transform individual characters.
@@ -663,7 +663,7 @@ a
 * Arguments are associated with parameters by position. It doesn’t matter what names are used. The first argument is associated with the fi rst parameter, the second argument with the second parameter, and so on.
 * Arguments passed to parameters are like assignment statements. The argument must be com-patible with the parameter (the same type). Passing a double to an int results in loss of value.
 
-## EXERCISES
+## 练习题
 
 1. Write the return result for each function call or explain the error.
     * a. pow(3.0, 2.0)
