第三章完成

--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -654,59 +654,59 @@ a
 
 ## 本章小结
 
-* You have been confronted with a large variety of details concerning the C++ programming language, expressions, program development, function calls, and the types of errors that occur during program development. Th is can be somewhat overwhelming at first, especially if you have never programmed before. However, most of these details are necessary for implementation of even the simplest program.
-* #include<cmath> provides access to many mathematical and trigonometric functions. \#include<cctype> provides access to a set of functions that classify and transform individual characters.
-* Functions that have a return type of double can be used wherever a double (or fl oating-point expression) can be used. Many of the cmath functions return double.
-* Most cmath functions require one numeric argument; pow requires two.
-* Preconditions and postconditions represent a contract between the function and the client code that calls the function. This documentation and other forms of documentation are intended to help someone understand what the function does.
-* The function heading itself provides vital usage information such as the return type, the func-tion name, and the number of parameters so the programmer knows how many arguments to include in the call.
-* Arguments are associated with parameters by position. It doesn’t matter what names are used. The first argument is associated with the fi rst parameter, the second argument with the second parameter, and so on.
-* Arguments passed to parameters are like assignment statements. The argument must be com-patible with the parameter (the same type). Passing a double to an int results in loss of value.
+* 本章涉及了大量C++编程语言的细节，包括表达式、编程开发、函数调用以及编程过程中可能会发生的错误类型。这对初学者来说会有一定的压力，尤其是之前没有任何编程经验的初学者。但哪怕是实现最简单的程序，这些细节中的大部分都是必须要掌握的。
+* `#include <cmath>`指令所引入是一个包含了许多数学函数和三角函数的库。`#include <cctype>`所引入的是一个是用于对个别字符进行分类和转换的函数库。
+* 返回值为`double`类型的函数可以放在任何一个使用`double`对象（或浮点数表达式）的地方，`cmath`库中大部分函数的返回值类型都是`double`。
+* `cmath`库中大部分函数都只有一个数字类型参数，`pow`有两个参数。
+* 前置条件与后置条件是函数与调用函数的客户代码之间的一种约定，这种文档或者其他类似的文档形式的作用就是帮助人们了解函数的功能。
+* 函数头信息中也包含了许多与函数用法相关的重要信息，譬如函数的返回值类型、函数的名称、函数参数的个数等，程序员们通常会根据这些信息来了解要用多少参数来调用函数。
+* 函数的实参与形参是一一匹配的，这与它们各自的名称无关。第一个实参必须匹配第一个形参，第二个实参必须配对第二个形参，以此类推。* 实参传递给形参的过程与赋值语句很类似，也就是说，实参与形参要相互兼容（譬如类型相同），将一个`double`值传递给`int`会导致部分值被丢失。
 
 ## 练习题
 
-1. Write the return result for each function call or explain the error.
-    * a. pow(3.0, 2.0)
-    * b. pow(-2, 5)
-    * c. ceil(1.001)
-    * d. ceil(-1.2)
-    * e. pow(16.0, 0.5)
-    * f. pow(-16.0, 2)
-    * g. fabs(-123.4)
-    * h. sqrt(-1.0)
-    * i. sqrt(sqrt(16.0))
-    * j. ceil 1.1
-    * k. floor()
-    * l. sqrt(0)
-2. Use these initializations to evaluate the expressions that follow:
+1. 请写出下列各函数调用的返回结果或出错原因。
+    * a. `pow(3.0, 2.0)`
+    * b. `pow(-2, 5)`
+    * c. `ceil(1.001)`
+    * d. `ceil(-1.2)`
+    * e. `pow(16.0, 0.5)`
+    * f. `pow(-16.0, 2)`
+    * g. `fabs(-123.4)`
+    * h. `sqrt(-1.0)`
+    * i. `sqrt(sqrt(16.0))`
+    * j. `ceil 1.1`
+    * k. `floor()`
+    * l. `sqrt(0)`
+2. 请根据给出的初始化语句计算出下列表达式的值。
     ```C++
-    double x = 5.0; double y = 7.5;
+    double x = 5.0;
+    double y = 7.5;
     ```
-    * a. sqrt(x - 1.0)
-    * b. ceil(y - 0.5)
-    * c. sqrt(y - x + 2.0)
-    * d. pow(10, 2)
-    * e. oor(y + 0.5)
-    * f. pow(x, 3.0)
-    * g. fabs(y - x)
-    * h. pow(10, 3)
-3. What is the value of pow(4, pow(2, 3))?
-4. Write an algorithm that shows the range of a projectile. The formula is 
+    * a. `sqrt(x - 1.0)`
+    * b. `ceil(y - 0.5)`
+    * c. `sqrt(y - x + 2.0)`
+    * d. `pow(10, 2)`
+    * e. `floor(y + 0.5)`
+    * f. `pow(x, 3.0)`
+    * g. `fabs(y - x)`
+    * h. `pow(10, 3)`
+3. `pow(4, pow(2, 3))`的返回值会是什么？
+4. 请编写一个计算弹道范围的算法，弹道公式为：
 
     $$range = sin(2 * angle) * velocity^2 / gravity$$
-where *angle* is the angle of the projectile’s takeoff (in radians), *velocity* is the initial velocity of the projectile (in meters per second), and *gravity* is acceleration due to gravity at 9.8 meters per second.
+在这里，*angle*是炮弹的发射角度（用弧度来表示），*velocity*是炮弹的初始速度（以米/每秒为单位），*gravity*是重力加速度，一般为9.8米/每秒。
 
-5. What happens if the client program does not satisfy the preconditions of a called function?
-6. What information do postconditions provide?
-7. Which of the following represent valid function headings?
-    * a. int large(int a, int b)
-    * b. double(double a, double b)
-    * c. int f(int a; int b;)
-    * d. int f(a, int b)
-    * e. double f()
-    * f. string c(string a)
-8. Name three possible return types from a C++ function (there are many).
-9. Given the following function heading with pre- and postconditions, write six function calls (with different arguments) that would adequately test fmod and would also help explain how fmod works to someone who has never seen it before.
+5. 如果调用方代码的行为不符合其调用函数的前置条件，会发生什么情况？
+6. 后置条件主要提供哪些信息？
+7. 在以下函数头信息中，哪几项是有效的？
+    * a. `int large(int a, int b)`
+    * b. `double(double a, double b)`
+    * c. `int f(int a; int b;)`
+    * d. `int f(a, int b)`
+    * e. `double f()`
+    * f. `string c(string a)`
+8. 请列举出三种C++函数返回值的名称（事实上有很多）。
+9. 请根据给定函数的头信息及其前置条件与后置条件，写出该函数的六个调用（要用不同的实参），这些调用要能对`fmod`函数进行充分的测试，并帮助之前没见过该函数的人们了解它的功能。
     ```C++
     double fmod(double x, double y)
     // post: Calculates the oating-point remainder.
@@ -714,18 +714,18 @@ where *angle* is the angle of the projectile’s takeoff (in radians), *velocity
     //       If the value of y is 0.0, fmod returns Not a Number.
     // Header required: <cmath>
     ```
-10. Write the values returned from each of the six function calls in your answer to the preceding question.
+10. 请写出你在上一题中回答的那六个函数的返回值。
 
-## PROGRAMMING TIPS
+## 编程小技巧
 
-1. When calling existing functions, supply the correct number and type of arguments. Th e function heading and documentation, if present, provide this information. Count the number of parameters between ( and ). Make sure each associated argument is the same type, or convertible to that type. An int can be assigned to a oat, a oat to a double, an int to a long, for example.
-2. Don’t mix arguments types with min and max functions. max(2, 3.0) and min(1.0, 4) are compile time errors.
-3. Three C++ types appear to be the same. C++ allows integer literals to be treated as character literals and vice versa. Also, underneath, false is 0 and true is 1. Th e reason there is no output here is because aChar is storing the non-printable char value of 1.
+1. 在调用现有函数时，我们必须要提供正确数量及类型的实参。函数的头信息及其文档（如果存在的话）会为我们提供这方面的信息。请数清楚`( )`之间的形参个数，并确保每个相关的实参都具有与之相同的类型，或者可以转换成该类型。譬如，`int`的值可以赋予`float`，`float`的值可以赋予`double`，`int`的值可以赋予`long`。
+2. 不要在调用`min`和`max`这两个函数时混用实参类型，譬如`max(2, 3.0)`和`min(1.0, 4)`都会导致编译时错误。
+3. C++中有三种类型在本质上是一样的。该语言允许将整数常量视为字符常量，反之亦然。另外，在下面的代码中，你会看到`false`输出为0，`true`输出为1。这是因为存储在`aChar`中的不是一个可打印的字符，其值为1。
     ```C++
     char aChar = true; // assign 1
     cout << ">" << aChar << "<" << endl; // Output: ><
     ```
-4. If you do not have the line using namespace std; you will have to prepend std:: before every occurrence of the cmath function you use.
+4. 如果我们没有在代码中加入`using namespace std;`这条语句，就需要在每个用到的`cmath`函数前面都加上`std::`前缀。
     ```C++
     #include <iostream> // For cout
     #include <cmath> // for ceil and oor
@@ -737,37 +737,38 @@ where *angle* is the angle of the projectile’s takeoff (in radians), *velocity
     }
     ```
 
-## PROGRAMMING PROJECTS
+## 编程项目
 
-### 3A cmath FUNCTIONS
+### 3A 使用`cmath`函数库
 
-Write a program that allows the user to enter any number. After an appropriate label, show the return value from each of the following functions (assume x represents the number input by the user):
+请编写一个程序，先让用户输入任意的数字，然后设置相应的标签，显示出以下这些函数的返回值（这里假设`x`为用户输入的数字）：
 
-1. the square root of x
-2. x to the 2.5 power
-3. the ceiling of x
-4. the floor of x
-5. the absolute value of x
+1. 计算`x`平方根的函数。
+2. 计算`x`的2.5次方的函数。
+3. 计算大于等于`x`的最小整数的函数。
+4. 计算小于等于`x`的最大整数的函数。
+5. 计算`x`绝对值的函数。
 
-Your dialogue should look like this:
+该程序的会话过程应该如下：
 
 ```shell
 Enter a number for x: ***2.5***
 sqrt(x) : 1.5814
 pow(x, 2.5) : 6.25
-ceil(x) : 3 oor(x) : 2
+ceil(x) : 3
+floor(x) : 2
 fabs(x) : 2.5
 ```
 
-### 3B CIRCLE
+### 3B 圆形问题
 
-Write a C++ program that inputs a value for the radius of a circle (r) from the keyboard and then outputs the diameter, circumference, and area of the circle. Use the pow function to compute the area.
+请编写一个C++程序，它会从键盘输入中读取圆的半径值，然后输出圆的直径、周长和面积。另外，我们要求你在计算圆的面积时使用`pow`函数。
 
-* *diameter* = 2 \* *radius*
-* *circumference* = *pi* \* *diameter*
-* *area* = *pi* \* *radius* ^2^
+* $diameter = 2 * radius$
+* $circumference = pi * diameter$
+* $area = pi * radius^2$
 
-Initialize PI as a constant object with the value of 3.14159. Your dialogue should look like this (*Note:* Output of fl oating-point numbers varies among C++ compilers, so your output might be slightly diff erent—especially in the number of decimal places shown for Circumference and Area):
+在这里，`PI`应被初始化为一个值为3.14159的常量对象。整个程序的会话过程应如下（*请注意：* 浮点数的输出情况是因C++编译器而异的，所以你们得到的输出结果可能会稍有不同，尤其是`Circumference`和`Area`这两个值所显示的小数位）：
 
 ```shell
 Enter Radius: ***1.0***
@@ -776,11 +777,11 @@ Circumference: 6.28318
 Area: 3.14159
 ```
 
-Run your program with radius = 1.0. Verify that your values for circumference and area match the preceding dialogue. After this, run your program with the input radii of 2.0 and 2.5 and verify that the output is what you expect.
+请以`radius = 1.0`的情况运行这个程序. 验证一下你所得到的`Circumference`和`Area`是否与上述会话样例相匹配。然后，再将半径值分别改成2.0和2.5，验证一下程序的输出是否符合你的预期。
 
-### 3C MORE ROUNDING
+### 3C 多种形式的四舍五入
 
-Write a program that asks the user for a number and displays that number rounded to zero, one, two, and three decimal places. Your dialogue should look like this:
+请编写一个程序，让用户输入一个数字，然后输出这个数字被四舍五入成0位、1位、2位、3位小数的的结果。该程序的会话过程应该如下：
 
 ```shell
 Enter the number to round: ***3.4567***
@@ -792,11 +793,11 @@ Enter the number to round: ***3.4567***
 
 ### 3D RANGE
 
-Write a program that determines the *range* of a projectile using this
+请编写一个计算弹道范围的算法，弹道公式为：
 
-$$formula: range = sin(2 * angle) * velocity^2 / gravity$$
+$$range = sin(2 * angle) * velocity^2 / gravity$$
 
-where *angle* is the angle of the projectile’s path (in radians), *velocity* is the initial velocity of the projectile (in meters per second), and *gravity* is acceleration at 9.8 meters per second (a constant). Th e takeoff angle must be input in degrees. Th erefore you must convert this angle to its radian equivalent. Th is is necessary because the trigonometric function sin(x) assumes the argument (x) is an angle expressed in radians. An angle in degrees can be converted to radians by multiplying the number of degrees by π/180 where π ≈ 3.14159. For example, 45° = 45 \* 3.14159/180, or 0.7853975 radians. Th e velocity is presumed to be input in meters per second. Make your interactive dialogue look like this:
+在这里，*angle*是弹道路径的发射角度（用弧度来表示），*velocity*是炮弹的初始速度（以米/每秒为单位），*gravity*是重力加速度，一般为9.8米/每秒。由于程序中的发射角度一定要以弧度为单位来输入，所以我们还需要将相关的角度值都转换成等价的弧度值。这样做是很有必要的，因为三角函数`sin(x)`所设定的实参`x`是用弧度来表示的。要想将角度值（`x`）转换成相应的弧度值，只需要将角度值乘以`π/180`即可（`π ≈ 3.14159`）。例如，$45° = 45 * 3.14159/180$，弧度值为0.7853975。另外，速度则被设定以以米/每秒为单位来输入。所以整个程序的会话过程应该如下：
 
 ```shell
 Takeoff angle (in degrees)? ***45.0***
@@ -805,17 +806,17 @@ Initial velocity (meters per second)? 100.0
 Range = 1020.41 meters
 ```
 
-### 3E TIME TRAVEL
+### 3E 时间旅行问题
 
-For astronauts approaching the speed of light in a spaceship, time passes more slowly. Also, the weight of their spaceship increases. The Lorentz factor indicates this change in time and weight depends on the spaceship velocity v
+在以光速飞行的宇宙飞船中，宇航员会感觉到时间变慢了，而他们飞船的重量却增加了。我们可以用洛伦茨因子（Lorentz factor）来表示飞船速度`v`与重量和时间的关系，其公式如下：
 
 $$factor = \frac{1}{\sqrt{1-\frac{u^2}{c^2}}}$$
 
-where *v* is velocity and *c* is the speed of light (299,792,458 meters/second). Th e *factor* can be used to compute how much perceived time is decreased for the astronauts and by how much the weight of their spaceship is increased. For example, at 74948114.5 meters per second (1/4 the speed of light) the factor is 1.038. Time’s passage is reduced by the factor and the weight is increased by that factor.
+在这里，*v*代表的是飞船的速度，*c*是光速（即299,792,458米/秒）。这个*因子*可以用来计算出当飞船速度增加时，宇航员减少的感知时间和飞船增加的重量。例如，但飞船以74948114.5米/秒（1/4光速）飞行时，该因子的值是1.038，我们可以看到时间减少了，重量增加了。
 
-Write a program that reads the weight of the spaceship on earth(90,000 kilograms), the fraction of the speed of light (0.25, less than 1.0), and the distance to travel in light years (Alpha Centauri is about 4.35 light years away).
+请根据以上描述编写一个程序，要求该程序需读取飞船在地球上的重量（譬如为90,000公斤）， 以光速的分数值来表示速度（譬如0.25，不能大于1.0），以及用光年为单位来描述旅行的距离（譬如地球到半人马座阿尔法星的距离是4.35光年）。
 
-**Dialog 1:**
+**程序会话 1:**
 
 ```shell
 Weight of spaceship on earth in kilograms? ***90000***
@@ -828,7 +829,7 @@ Distance to travel in light years? ***4.35***
         Weight of spaceship: 92951.6 kg traveling at 7.49481e+07 m/s
 ```
 
-**Dialog 2:**
+**程序会话 2:**
 
 ```shell
 Weight of spaceship on earth in kilograms? ***90000***
