第四章开始

--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -2,43 +2,43 @@
 
 **前章回顾**
 
-C++ has many free functions that any programmer can reuse. These documented functions can be found at **http://www.cplusplus.com/reference**. It is considered good practice to compose code into well-defined functions, test them, and then call them from our programs. Th is makes for more readable programs. However, C++ does not provide all functions needed by everyone in all situations.
+C++中有许多可供所有程序员重用的自由函数，我们可以通过访问`http://www.cplusplus.com/reference`来获取这些函数的文档。在编程过程中，将相关的代码组合成一个定义明确的函数，以供日后测试并调用，已经被认为是一种非常好的实践经验，这有助于我们构建出可读性更强的程序。但C++本身不可能提供我们每个人在所有应用场景中所需要用到的函数。
 
 **本章提要**
 
-This chapter shows how to write your own functions. After studying this chapter, you will be able to
+本章将重点介绍如何编写属于自己的函数。我们希望在完成本章的学习之后，你将掌握：
 
-* implement free functions
-* pass values to your functions as input
-* return values from your functions as output
-* test your new functions
-* begin to understand the scope of objects and functions
+* 如何实现自由函数。
+* 如何传递相关的值给你的函数，以作为它的输入。
+* 如何从你的函数中返回相对值，以作为它的输出。
+* 如何测试你的新函数。
+* 初步理解对象与函数的所在域。
 
-## 4.1 IMPLEMENTING YOUR OWN FUNCTIONS
+## 4.1 实现属于自己的函数
 
-Functions, such as those presented in the previous chapter like min, max, abs, round, and sqrt, are defined as a function heading followed by a block.
+从上一章提到的那些函数（譬如`min`、`max`、`abs`、`round`和`sqrt`）可以看出，函数的定义应该是一个函数头信息加上一个语句块。
 
-**General Form 4.1** *Free Function*
+**通用格式 4.1**： *自由函数*
 
 > *function-heading* <br>
 > *block*
 
-A block begins with { and ends with }. It contains components such as variable declarations and executable statements.
+其中，*block*是一个以`{`开头，并以`}`结尾的语法单元，其内容主要由变量声明和执行语句等部分组成。
 
-**General Form 4.2** *Block*
+**通用格式 4.2**: *语句块*
 
 > { <br>
 > *object-initializations* <br>
 > *statements* <br>
 >}
 
-Functions get their input via the arguments in the function call. The function uses these input values to compute a result, which is then returned to the caller. You have seen how arguments are associated with parameters to get input into the function. Functions communicate values to the calling code through the return statement.
+函数的输入就是调用该函数的实参。在获取输入之后，函数会利用这些输入值计算出某个结果，然后将其返回给它的调用者。我们之前已经介绍过如何通过实参与形参关联配对的方式将值输入到函数中，下面我们来介绍如何通过返回语句将值传回给调用该函数的代码。
 
-**General Form 4.3** *Return Statement*
+**通用格式 4.3**： *返回语句*
 
 > return *expression* ;
 
-Example of returning a value back to the calling code:
+我们可以具体示范一下将值返回给调用方代码的做法：
 
 ```C++
 int minOf3(int a, int b, int c) {
@@ -47,14 +47,14 @@ int minOf3(int a, int b, int c) {
 }
 ```
 
-When the return statement is encountered, the expression that follows return replaces the function call in the client code as program control returns to the place where the function was called. The following function named f implements the function *f* (*x*) = 2*x*^2^−1. Notice that the function must be coded before it can be called—the entire function f is located before the call to it from main.
+当程序执行到返回语句时，`return`后面的表达式将会实际替换掉调用方代码调用该函数的位置，以作为程序控制权返回的地方。接下来，我们来实现一个名为`f`的函数$f(x) = 2x^2−1$。需要提醒的是，这个函数的编码必须写在调用它的函数之前，也就是说，函数`f`必须位于调用它的`main`函数之前。
 
 ```C++
-#include <iostream> // For cout
-#include <cmath> // For pow
+#include <iostream>          // For cout
+#include <cmath>             // For pow
 using namespace std;
 
-double f(double x) { // post: Return 2 \* x \* x - 1
+double f(double x) { // post: Return 2 * x * x - 1
     double result;
     result = 2 \* pow(x, 2) - 1.0;
     return result;
@@ -71,16 +71,16 @@ int main() {
 }
 ```
 
-**Dialogue**
+**程序会话**
 
 ```shell
 Input x: ***1.01***
 f(1.01) = 1.0402
 ```
 
-**SELF-CHECK**
+**自检题**
 
-4-1 What value is returned for each of these function calls? If there is an error, explain it. Use $f(x) = 2x^2−1$ from the previous example.
+4-1 请根据之前示例中实现的$f(x) = 2x^2−1$，写出下列函数调用的返回值，如果调用出错，请说明出错原因。
 
 * a. `f(0.0)`
 * b. `f(-2.0)`
@@ -89,7 +89,7 @@ f(1.01) = 1.0402
 * e. `f()`
 * f. `f(5.8)`
 
-In the next example, the function serviceCharge is declared with the double return type. Th e call to serviceCharge is replaced by a double value that depends on the values of the arguments.
+在接下来的这个示例中，函数`serviceCharge`所声明的返回值类型是`double`，因此调用`serviceCharge`函数的地方将会被替换成某个`double`值，而该值则取决于其调用实参的值。
 
 ```C++
 // Call serviceCharge to determine a bank debit
@@ -129,7 +129,7 @@ int main() {
 }
 ```
 
-**Dialogue**
+**程序会话**
 
 ```shell
 Checks this month? ***17***
