--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -103,7 +103,7 @@ double serviceCharge(int checks, int ATMs) {
     // post: Return a banking fee based on local rules
     double result;
 
-    result = 0.25 * checks + 0.10 * ATMs + MONTHLY\_FEE;
+    result = 0.25 * checks + 0.10 * ATMs + MONTHLY_FEE;
     return result;
 }
 
@@ -137,21 +137,21 @@ ATMs this month? ***9***
 Fee: 10.15
 ```
 
-Here is what happens when the preceding program runs:
+如你所见。上述程序在运行过程中发生了以下事情：
 
-1. The user is asked to supply input for the number of checks and ATM transactions.
-2. The values of the arguments (17 and 9) are assigned to the parameters of serviceCharge (checks = 17 and ATMs = 9). These particular values will be used by the function to return the proper monthly bank fee.
-3. The statements in serviceCharge execute.
-4. The return is encountered in serviceCharge.
-5. The function call serviceCharge(checks, ATMs) in main is replaced by the returned value of 10.15.
-6. The function’s return value is assigned to fee.
-7. The fee is displayed.
+1. 用户被要求输入自己使用支票和ATM进行交易的次数。
+2. 调用实参的值（即17和9）被传递给了`serviceCharge`函数的形参（即`checks = 17`和`ATMs = 9`），该函数将根据这些被指定的值来返回当前月需支付的银行手续费。
+3. `serviceCharge`函数中的语句都会被执行。
+4. `serviceCharge`函数最终会遇到`return`关键字。
+5. `main`函数中的函数调用`serviceCharge(checks, ATMs)`将会被替换成该函数返回的值10.15。
+6. 函数的返回值将会被赋值给`fee`。
+7. `fee`会被输出显示。
 
-### 4.1.1 TEST DRIVERS
+### 4.1.1 测试驱动程序
 
-When a function requires arguments, it is not unusual to have the same variable name declared in two different places. Consider the previous program that declares checks and ATMs in main and also as parameters within the function serviceCharge. The objects declared in main are used to obtain user input. The parameters declared in serviceCharge obtain input from main. Although they have the same names, they are different variables.
+当我们需要用实参调用函数时，在两个不同的地方声明相同变量名声明的情况并不罕见。以之前的程序为例，`main`函数中声明的`checks`和`ATMs`同时也是`serviceCharge`函数的形参。`main`函数中声明的对象是用来获取用户输入的，而`serviceCharge`函数声明的形参则用来获取来自`main`函数的输入。尽管它们使用了相同的变量名，但它们是不同的变量。
 
-Sometimes the duplication of parameter names in main is not required. In the next program, you’ll see there is no user input, so the duplicated objects are not necessary. Instead, the arguments used to test the function are constants. Rather than being assigned to another object, the program simply displays the return results. Th e only purpose of this program is to test the function—to verify that the return values are what was expected. Th is is a good thing to do before the function becomes incorporated into a larger program. In fact, many of the programming problems ask you to carry out this form of testing.
+当然，有时候我们也不需要在形参上复制`main`函数中的同名对象。在下面的程序中，我们将会看到这回没有用户输入操作了，自然也 就没有对象需要复制。取而代之的是，这会我们用来测试函数的实参是一些常量，而且这次也不再需要将返回值赋值给另一个对象了，程序会直接显示返回结果。这段程序唯一的功能就是测试函数——验证其返回值是否符合预期。在将该函数应用到更大的程序中之前，做一些这样的测试是一件好事。事实上，许多编程问题都需要我们进行这种形式的测试。
 
 ```C++
 // The main function makes several calls to test a new function
@@ -179,7 +179,7 @@ int main() {
 }
 ```
 
-**Output**
+**程序输出**
 
 ```shell
 5
@@ -188,11 +188,11 @@ int main() {
 5.35
 ```
 
-This version of main is called a test driver. A *test driver* is a program with the sole purpose of testing a new function. Functions like serviceCharge, sqrt, and pow are intended to be small parts of much bigger programs. Th erefore all functions should be thoroughly tested before they are reused. The four sample problems shown above were predicted and documented in comments. Th is has been a successful  test of the serviceCharge function.
+这个版本的`main`函数叫做*测试驱动程序（test driver）*，这是一种专门用于测试新函数的程序。譬如，像`serviceCharge`、`sqrt`和`pow`这些函数通常都只是较大型程序中的一小部分，因此在它们被重用之前全都应该经过全面性的测试。另外，对于上面所呈现的四个样本问题。我们都在对应的注释中注明了自己的预期值。如你所见，对于`serviceCharge`函数来说这是一个成功的测试程序。
 
-### 4.1.2 FUNCTIONS WITH ONLY A RETURN STATEMENT
+### 4.1.2 只有一条返回语句的函数
 
-Some functions are so simple, they may contain only a return statement.
+有时候我们会看到一些极其简单的函数，它们可能只有一条返回语句。譬如：
 
 ```C++
 double serviceCharge(int checks, int ATMs) {
@@ -202,15 +202,15 @@ double serviceCharge(int checks, int ATMs) {
 }
 ```
 
-However, this textbook will often use the following convention in addition to the above shortcut (one return statement):
+但除了上面这种极其简单（即只包含一条返回语句）的函数外，本书在定义函数时都将遵守以下约定：
 
-1. Declare a local variable named result to be the same type as the function’s return type.
-2. Store the desired value in result.
-3. Return result.
+1. 我们会声明一个名为`result`的局部变量，并且它的类型与函数定义的返回类型相同。
+2. 然后将最终所需的值存储到变量`result`中。
+3. 最后返回`result`。
 
-This is extra work for simple functions. However, this pattern will help when the processing gets more complex, beginning in Chapter 7, “Selection.”
+虽然，这种约定在简单函数中会显得有些多余。但在第7章“选择操作”之后，这种模式将会非常有助于我们面对那些日益复杂的处理操作。
 
-Also, the extra two lines of code are likely to prevent you from making a very common mistake. Perhaps because other languages use this technique to return values or perhaps because it simply appears to be the right thing to do, it is common to try to assign a value to the function name. This is a compile time error. You can only assign values to variables.
+除此之外，看似多余的这两行代码有时还能避免一个非常常见的错误。这或许是因为其他编程语言在技术上支持这样做，或许是因为想当然，总之我们常常会试图将一个值赋值给函数名，这会导致编译时错误，因为只有变量才能被赋值。
 
 ```C++
 double serviceCharge(int checks, int ATMs) {
@@ -220,11 +220,11 @@ double serviceCharge(int checks, int ATMs) {
 }
 ```
 
-If you do make this common mistake, the compiler will tell you. Fix the error by placing an expression of the correct type, double, after the return.
+当然，如果你真的犯了这个常见的错误，编译器会告知你的。我们只需要在表达式中加上正确的返回值类型`double`就可以修复这个错误，然后就可以返回这个函数了。
 
-**SELF-CHECK**
+**自检题**
 
-4-2 Given the following function f1, what value is returned with f1(9.0)?
+4-2 请根据下面给出的函数`f1`，写出`f1(9.0)`这个调用的返回值。
 
 ```C++
 double f1(double x) {
@@ -234,9 +234,9 @@ double f1(double x) {
 }
 ```
 
-4-3 Does the function call f1(-1.5) satisfy the previous function’s precondition? What happens during a call to f1 with a negative number for an argument?
+4-3 `f1(-1.5)`这个函数调用是否满足上述函数的前置条件？使用负数做实参调用`f1`函数会发生什么情况？
 
-4-4 Describe how to fi x the error in each function.
+4-4 请分别说明下列函数中错误的修复方法。
 
 * a
     ```C++
@@ -275,9 +275,9 @@ double f1(double x) {
     }
     ```
 
-4-5 Write a function times3 that returns a value that is three times greater than the argument (times3(2.0) should return 6.0).
+4-5 请编写一个名为`times3`的函数，该函数的功能是返回一个三倍于其实参的值（譬如`times3(2.0)`应该返回6.0）。
 
-## 4.2 ANALYSIS, DESIGN, AND IMPLEMENTATION
+## 4.2 分析、设计与实现
 
 Rather than writing a program, consider a problem that implements a function that may be a very small part of a large program. It may represent just one step of an algorithm, but it is frequently called.
 
