--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -279,29 +279,29 @@ double f1(double x) {
 
 ## 4.2 分析、设计与实现
 
-Rather than writing a program, consider a problem that implements a function that may be a very small part of a large program. It may represent just one step of an algorithm, but it is frequently called.
+与编写程序相比，实现函数所需要考虑的问题只是一个大型程序中的一小部分。它可能只是某个算法中的一个步骤，只不过经常会被调用罢了。
 
-*Problem:* Compute the distance between two points.
+*问题：* 计算出两点之间的距离。
 
-### 4.2.1 ANALYSIS
+### 4.2.1 分析
 
-Recall that the analysis phase of program development involves determining input and output. Also recall that while developing computer-based solutions to problems involving the IPO algorithmic pattern, the developer determines the output that must be sent to the user and also determines the input required from the user. Replace the word *user* with *client* in the preceding sentence, and the IPO pattern can be applied again to assist the design of functions. Except now the output from the function is expressed in the return statement and the input is expressed in terms of the argument/parameter associations. Here is a generalized IPO algorithm as it relates to functions instead of programs.
+还记得吗？我们在程序开发的分析阶段会涉及到如何确定输入与输出，另外还有用计算机解决问题时常涉及的IPO算法模式。也就是说，开发者必须得先确定哪些是必须要发送给用户的输出，哪些是用户所需要提供的输入。在函数的设计中，我们只需要将之前的*用户*替换成*客户端*，IPO模式一样是可以适用的。除此之外，函数的输出现在变成了函数的返回语句，而输入则变成了函数实参与形参的关联配对。下面，我们来描述一个适用于函数而不是程序的通用IPO算法模式。
 
-**IPO Pattern Applied to Functions**
+**适用于函数的IPO模式**
 
-* Input: Input values to the function via argument/parameter associations.
-* Process: Compute the result to be returned.
-* Output: Return the result.
+* 输入：经由实参与形参之间的关联配对动作将相关值输入给函数。
+* 处理：计算出待返回的结果。
+* 输出：返回结果。
 
-Sample problems are a good way to confi rm understanding of a problem. Sample problems also provide expected results that can be compared to program output during program testing. It is a good idea to develop sample problems for new functions. This will help you decide what the function needs as input and, therefore, the number and class of parameters to write in the function heading. Th e sample problems also provide the expected output of the test driver. 
+问题样例是我们确定自己是否已经理解目标问题是一个好方法。而且在程序测试过程中，这些样例所提供的预期结果也可以被拿来与程序的输出进行比对。同样地，为新函数开发一组问题样例也是一个很好的主意，我们可以通过这些样例来确定函数所需的输入。也就是要在函数头信息中写明的形参类型及其数量。当然，问题样例也为我们的测试驱动程序提供了预期的输出值。
 
-Four doubles are required to compute the distance between two points ($x_1$, $y_1$) and ($x_2$, $y_2$) using this formula:
+根据以下公式可以看出，想要计算出（$x_1$, $y_1$）与（$x_2$, $y_2$）这两点之间的距离，我们需要四个`double`类型的值：
 
 $$distance = \sqrt{{(x_1 - x_2})^2 + {(y_1 - y_2)}^2}$$
 
-Here are some predicted outputs for a few sets of values for $x_1$, $y_1$, $x_2$, and $y_2$.
+下面是几组$x_1$、$y_1$、$x_2$、$y_2$的值以及预估的输出。
 
-**Sample Problems**
+**问题样例**
 
 | $x_1$ | $y_1$ | $x_2$ | $y_2$ | Distance |
 |-------|-------|-------|-------|----------|
@@ -310,13 +310,13 @@ Here are some predicted outputs for a few sets of values for $x_1$, $y_1$, $x_2$
 | -5.7  | 2.5   | 3.3   | –4.7  | 11.5256  |
 | 0.0   | 0.0   | 0.0   | 0.0   | 0.0      |
 
-The IPO pattern is now applied to functions as follows:
+接下来，我们要将IPO模式应用到该函数中去：
 
-* Input: Input two points at the function call ($x_1$, $y_1$) and ($x_2$, $y_2$)
-* Process: Evaluate $\sqrt{{(x_1 - x_2})^2 + {(y_1 - y_2)}^2}$
-* Output: Return the result
+* 输入：我们会以（$x_1$，$y_1$）和（$x_2$，$y_2$）这两点为参数来调用函数。
+* 处理：按照$\sqrt{{(x_1 - x_2})^2 + {(y_1 - y_2)}^2}$这个运算公式来进行求值。
+* 输出：返回计算结果。
 
-### 4.2.2 DESIGN
+### 4.2.2 设计
 
 The designer must decide how many and what class of parameters are required for a function. In this example, four values are needed to represent the two input points (x1, y1, x2, and y2). Th e best class of parameters is double to allow points such as 5.62 and -9.864. The best return type is double. With the square root function involved, double helps return precise answers. A good function name is distance—it describes what the function does. This leads to a function heading with a return type of double, a function name of distance, and four descriptively named double parameters.
 
